--- a/src/index.html
+++ b/src/index.html
@@ -1,28 +1,17 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <meta charset="UTF-8">
-  <title>Hello World!</title>
-</head>
-<body>
-<div id="content"></div>
-</body>
+  <head>
+    <meta charset="UTF-8">
+    <title>Hello World!</title>
+  </head>
+  <body>
+    <div id="content"></div>
 
-<!-- inject:js -->
-<!-- endinject -->
+    <!-- Dependencies -->
+    <script src="../node_modules/react/dist/react.js"></script>
+    <script src="../node_modules/react-dom/dist/react-dom.js"></script>
 
-<script>
-  System.config({
-    map: {
-      'react': '../node_modules/react/dist/react.js',
-      'react-dom': '../node_modules/react-dom/dist/react-dom.js'
-    },
-    packages: {
-      js: {
-        defaultExtension: 'js'
-      }
-    }
-  });
-  System.import('js/index.js').then(null, console.error.bind(console));
-</script>
+    <!-- Main -->
+    <script src="./index.js"></script>
+  </body>
 </html>
