--- a/src/index.html
+++ b/src/index.html
@@ -7,11 +7,16 @@
   <body>
     <div id="content"></div>
 
-    <!-- Dependencies -->
-    <script src="../node_modules/react/dist/react.js"></script>
-    <script src="../node_modules/react-dom/dist/react-dom.js"></script>
-
-    <!-- Main -->
-    <script src="./index.js"></script>
+    <script>
+      {
+        const script = document.createElement('script');
+        const port = process.env.PORT || 3000;
+        script.src = (process.env.HOT)
+                ? 'http://localhost:' + port + '/dist/index.js'
+                : './dist/index.js';
+        // HACK: Writing the script path should be done with webpack
+        document.body.appendChild(script);
+      }
+    </script>
   </body>
 </html>
