--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Electron React Webpack HMR Example</title>
   </head>
-  <body>
+  <body style="margin: 0">
     <div id="root"></div>
     <script src="renderer.js"></script>
   </body>
