--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Electron React Webpack HMR Example</title>
+    <title>Kube Flash</title>
   </head>
   <body style="margin: 0">
     <div id="root"></div>
