--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,6 @@
   </head>
   <body style="margin: 0">
     <div id="root"></div>
-    <script src="renderer.js"></script>
+    <script src="app.js"></script>
   </body>
 </html>
