--- a/public/index.html
+++ b/public/index.html
@@ -7,5 +7,6 @@
   <body style="margin: 0">
     <div id="root"></div>
     <script src="app.js"></script>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   </body>
 </html>
