Apply Fujitsu theme

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Ubikube</title>
   </head>
-  <body style="margin: 0">
+  <body>
     <div id="root"></div>
     <script src="app.js"></script>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
